--- a/docs/advanced-usage/satellite-domains.mdx
+++ b/docs/advanced-usage/satellite-domains.mdx
@@ -86,7 +86,7 @@ The `URL` mentioned above is the request url for server side usage or the curren
   <Tab>
     You can embed the [`<SignIn />`][signin] component using the [Next.js optional catch-all route](https://nextjs.org/docs/pages/building-your-application/routing/dynamic-routes#optional-catch-all-routes). This allows you to redirect the user inside your application. The [`<SignIn />`][signin] component should be mounted on a public page.
 
-    <CodeBlockTabs options={["<ClerkProvider />", "Middleware"]}>
+    <CodeBlockTabs options={["<ClerkProvider>", "Middleware"]}>
     ```jsx filename="_app.tsx"
     import { ClerkProvider } from "@clerk/nextjs";
     import Head from "next/head";
