--- a/docs/components/customization/localization.mdx
+++ b/docs/components/customization/localization.mdx
@@ -59,7 +59,7 @@ To get started, install the `@clerk/localizations` package.
   ```
 </CodeBlockTabs>
 
-Once the `@clerk/localizations` package is installed, you can import the localizations you need by removing the "-" from the locale. In this example, the fr-FR locale is imported as `frFR`. The imported localization is then passed to the `localization` prop on the [`<ClerkProvider />`](/docs/components/clerk-provider).
+Once the `@clerk/localizations` package is installed, you can import the localizations you need by removing the "-" from the locale. In this example, the fr-FR locale is imported as `frFR`. The imported localization is then passed to the `localization` prop on the [`<ClerkProvider>`](/docs/components/clerk-provider).
 
 ```tsx filename="_app.tsx"
 import { ClerkProvider } from "@clerk/nextjs";
