--- a/docs/components/customization/themes.mdx
+++ b/docs/components/customization/themes.mdx
@@ -30,7 +30,7 @@ To get started, install the `@clerk/themes` package.
   ```
 </CodeBlockTabs>
 
-To use a theme, import it from `@clerk/themes` and pass it to the `appearance` prop of a Clerk component. You can pass it to the [`<ClerkProvider />`](/docs/components/clerk-provider) component to apply it to all Clerk components in your app or you can pass it to a single Clerk component. For guided examples and to learn further about how to use themes, see the [Appearance prop](/docs/components/customization/overview#using-a-pre-built-theme) documentiation.
+To use a theme, import it from `@clerk/themes` and pass it to the `appearance` prop of a Clerk component. You can pass it to the [`<ClerkProvider>`](/docs/components/clerk-provider) component to apply it to all Clerk components in your app or you can pass it to a single Clerk component. For guided examples and to learn further about how to use themes, see the [Appearance prop](/docs/components/customization/overview#using-a-pre-built-theme) documentiation.
 
 ### Default theme
 
