--- a/docs/components/customization/variables.mdx
+++ b/docs/components/customization/variables.mdx
@@ -9,13 +9,13 @@ The `variables` property is used to adjust the general styles of the component's
 
 ## Usage
 
-You can customize Clerk components by passing an object of variables to the `variables` property of the [`appearance`](/docs/components/customization/overview) prop. You can pass it to the [`<ClerkProvider />`](/docs/components/clerk-provider) component to apply it to all Clerk components in your app or you can pass it to a single Clerk component.
+You can customize Clerk components by passing an object of variables to the `variables` property of the [`appearance`](/docs/components/customization/overview) prop. You can pass it to the [`<ClerkProvider>`](/docs/components/clerk-provider) component to apply it to all Clerk components in your app or you can pass it to a single Clerk component.
 
-### Pass `variables` to `<ClerkProvider />`
+### Pass `variables` to `<ClerkProvider>`
 
-To customize all Clerk components, pass the `variables` property to the `appearance` prop to the `<ClerkProvider />` component.
+To customize all Clerk components, pass the `variables` property to the `appearance` prop to the `<ClerkProvider>` component.
 
-In the example below, the primary color is set to red and the text color is set to white. Because these styles are applied to the `<ClerkProvider />`, which wraps the entire application, these styles will be applied to all Clerk components that use the primary color and text color.
+In the example below, the primary color is set to red and the text color is set to white. Because these styles are applied to the `<ClerkProvider>`, which wraps the entire application, these styles will be applied to all Clerk components that use the primary color and text color.
 
 <Tabs type="framework" items={["Next.js", "React", "Remix"]}>
   <Tab>
@@ -154,7 +154,7 @@ In the example below, the primary color is set to red and the text color is set 
   </Tab>
 </Tabs>
 
-You can customize all instances of a Clerk component by passing the component to the `appearance` prop of the `<ClerkProvider />`. The `appearance` prop accepts the name of the Clerk component you want to style as a key. 
+You can customize all instances of a Clerk component by passing the component to the `appearance` prop of the `<ClerkProvider>`. The `appearance` prop accepts the name of the Clerk component you want to style as a key. 
 
 In the example below, the primary color is set to red and the text color is set to white for all instances of the [`<SignIn />`](/docs/components/authentication/sign-in) component. 
 
