--- a/docs/components/unstyled/sign-in-button.mdx
+++ b/docs/components/unstyled/sign-in-button.mdx
@@ -1,11 +1,11 @@
 ---
-title: <SignInButton />
-description: The <SignInButton /> component is a button that links to the sign-in page or displays the sign-in modal.
+title: <SignInButton>
+description: The <SignInButton> component is a button that links to the sign-in page or displays the sign-in modal.
 ---
 
-# `<SignInButton />`
+# `<SignInButton>`
 
-The `<SignInButton />` component is a button that links to the sign-in page or displays the sign-in modal.
+The `<SignInButton>` component is a button that links to the sign-in page or displays the sign-in modal.
 
 ## Usage
 
@@ -19,7 +19,7 @@ The `<SignInButton />` component is a button that links to the sign-in page or d
     return (
       <div>
       <h1> Sign in </h1>
-        <SignInButton />
+        <SignInButton>
       </div>
     );
   }
@@ -32,7 +32,7 @@ The `<SignInButton />` component is a button that links to the sign-in page or d
     return (
       <div>
       <h1> Sign in </h1>
-        <SignInButton />
+        <SignInButton>
       </div>
     );
   }
@@ -45,7 +45,7 @@ The `<SignInButton />` component is a button that links to the sign-in page or d
     return (
       <div>
       <h1> Sign in </h1>
-        <SignInButton />
+        <SignInButton>
       </div>
     );
   }
@@ -58,7 +58,7 @@ The `<SignInButton />` component is a button that links to the sign-in page or d
     return (
       <div>
       <h1> Sign in </h1>
-        <SignInButton />
+        <SignInButton>
       </div>
     );
   }
@@ -138,5 +138,5 @@ In some cases you will want to use your own button, or button text. You can do t
 | `redirectUrl` | `string` | Full URL or path to navigate after successful sign in or sign up.<br /> The same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
 | `afterSignInUrl` | `string` | The full URL or path to navigate after a successful sign in. |
 | `afterSignUpUrl` | `string` | The full URL or path to navigate after a successful sign up. |
-| `mode` | `'redirect' \| 'modal'` | Determines what happens when a user clicks on the `<SignInButton />`. Setting this to `'redirect'` will redirect the user to the sign-in route. Setting this to `'modal'` will open a modal on the current route.<br />Defaults to 'redirect'`
+| `mode` | `'redirect' \| 'modal'` | Determines what happens when a user clicks on the `<SignInButton>`. Setting this to `'redirect'` will redirect the user to the sign-in route. Setting this to `'modal'` will open a modal on the current route.<br />Defaults to 'redirect'`
 
