--- a/docs/components/unstyled/sign-in-with-metamask.mdx
+++ b/docs/components/unstyled/sign-in-with-metamask.mdx
@@ -1,11 +1,11 @@
 ---
-title: <SignInWithMetamaskButton />
-description: The `<SignInWithMetamaskButton />` component is used to complete a one-click, cryptographically-secure login flow using MetaMask.
+title: <SignInWithMetamaskButton>
+description: The `<SignInWithMetamaskButton>` component is used to complete a one-click, cryptographically-secure login flow using MetaMask.
 ---
 
-# `<SignInWithMetamaskButton />`
+# `<SignInWithMetamaskButton>`
 
-The `<SignInWithMetamaskButton />` component is used to complete a one-click, cryptographically-secure login flow using MetaMask.
+The `<SignInWithMetamaskButton>` component is used to complete a one-click, cryptographically-secure login flow using MetaMask.
 
 ## Usage
 
@@ -19,7 +19,7 @@ The `<SignInWithMetamaskButton />` component is used to complete a one-click, cr
     return (
       <div>
       <h1> Sign in </h1>
-        <SignInWithMetamaskButton />
+        <SignInWithMetamaskButton>
       </div>
     );
   }
@@ -32,7 +32,7 @@ The `<SignInWithMetamaskButton />` component is used to complete a one-click, cr
     return (
       <div>
       <h1> Sign in </h1>
-        <SignInWithMetamaskButton />
+        <SignInWithMetamaskButton>
       </div>
     );
   }
@@ -45,7 +45,7 @@ The `<SignInWithMetamaskButton />` component is used to complete a one-click, cr
     return (
       <div>
       <h1> Sign in </h1>
-        <SignInWithMetamaskButton />
+        <SignInWithMetamaskButton>
       </div>
     );
   }
@@ -58,7 +58,7 @@ The `<SignInWithMetamaskButton />` component is used to complete a one-click, cr
     return (
       <div>
       <h1> Sign in </h1>
-        <SignInWithMetamaskButton />
+        <SignInWithMetamaskButton>
       </div>
     );
   }
