--- a/docs/components/unstyled/sign-out-button.mdx
+++ b/docs/components/unstyled/sign-out-button.mdx
@@ -1,17 +1,17 @@
 ---
-title: <SignOutButton />
-description: The `<SignOutButton />` component is a button that signs a user out.
+title: <SignOutButton>
+description: The `<SignOutButton>` component is a button that signs a user out.
 ---
 
-# `<SignOutButton />`
+# `<SignOutButton>`
 
-The `<SignOutButton />` component is a button that signs a user out. By default, it is a `<button>` tag that says **Sign Out**, but it is completely customizable by passing children.
+The `<SignOutButton>` component is a button that signs a user out. By default, it is a `<button>` tag that says **Sign Out**, but it is completely customizable by passing children.
 
 ## Usage
 
 ### Basic usage
 
-The example below shows how to use the `<SignOutButton />` component. 
+The example below shows how to use the `<SignOutButton>` component. 
 
 <Tabs type="framework" items={["Next.js", "React", "Remix", "Gatsby"]}>
   <Tab>
@@ -23,7 +23,7 @@ The example below shows how to use the `<SignOutButton />` component.
         return (
           <div>
           <h1> Sign out </h1>
-            <SignOutButton />
+            <SignOutButton>
           </div>
         );
       }
@@ -36,7 +36,7 @@ The example below shows how to use the `<SignOutButton />` component.
         return (
           <div>
           <h1> Sign out </h1>
-            <SignOutButton />
+            <SignOutButton>
           </div>
         );
       }
@@ -52,7 +52,7 @@ The example below shows how to use the `<SignOutButton />` component.
       return (
         <div>
         <h1> Sign out </h1>
-          <SignOutButton />
+          <SignOutButton>
         </div>
       );
     }
@@ -67,7 +67,7 @@ The example below shows how to use the `<SignOutButton />` component.
       return (
         <div>
         <h1> Sign out </h1>
-          <SignOutButton />
+          <SignOutButton>
         </div>
       );
     }
@@ -82,7 +82,7 @@ The example below shows how to use the `<SignOutButton />` component.
       return (
         <div>
         <h1> Sign out </h1>
-          <SignOutButton />
+          <SignOutButton>
         </div>
       );
     }
@@ -92,7 +92,7 @@ The example below shows how to use the `<SignOutButton />` component.
 
 ### Custom usage
 
-You can create a custom button by wrapping your own button, or button text, in the `<SignOutButton />` component.
+You can create a custom button by wrapping your own button, or button text, in the `<SignOutButton>` component.
 
 <Tabs type="framework" items={["Next.js", "React", "Remix", "Gatsby"]}>
   <Tab>
@@ -204,7 +204,7 @@ In the example below, the `sessionId` is retrieved from the [`useAuth()`](/docs/
           return (
             <div>
               <h1> Sign in </h1>
-              <SignInButton />
+              <SignInButton>
             </div>
           );
         }
@@ -228,7 +228,7 @@ In the example below, the `sessionId` is retrieved from the [`useAuth()`](/docs/
           return (
             <div>
               <h1> Sign in </h1>
-              <SignInButton />
+              <SignInButton>
             </div>
           );
         }
@@ -255,7 +255,7 @@ In the example below, the `sessionId` is retrieved from the [`useAuth()`](/docs/
         return (
           <div>
             <h1> Sign in </h1>
-            <SignInButton />
+            <SignInButton>
           </div>
         );
       }
@@ -281,7 +281,7 @@ In the example below, the `sessionId` is retrieved from the [`useAuth()`](/docs/
         return (
           <div>
             <h1> Sign in </h1>
-            <SignInButton />
+            <SignInButton>
           </div>
         );
       }
@@ -307,7 +307,7 @@ In the example below, the `sessionId` is retrieved from the [`useAuth()`](/docs/
         return (
           <div>
             <h1> Sign in </h1>
-            <SignInButton />
+            <SignInButton>
           </div>
         );
       }
@@ -423,5 +423,5 @@ In the example below, the `signOut()` method is retrieved from the [`useClerk()`
 | Name | Type | Description |
 | --- | --- | --- |
 | `signOutCallback?` | <code>{`() => (void \| Promise<any>)`}</code> | A promise to handle after the sign out has successfully happened. |
-| `children?` | `React.ReactNode` | children you want to wrap the `<SignOutButton />` in. |
+| `children?` | `React.ReactNode` | children you want to wrap the `<SignOutButton>` in. |
 | `signOutOptions?` | `SignOutOptions` | Object that has a `sessionId` property. The `sessionId` can be passed in to sign out a specific session, which is useful for multisession applications. |
