--- a/docs/components/unstyled/sign-up-button.mdx
+++ b/docs/components/unstyled/sign-up-button.mdx
@@ -1,11 +1,11 @@
 ---
-title: <SignUpButton />
-description: The <SignUpButton /> component is a button that links to the sign-up page or displays the sign-up modal.
+title: <SignUpButton>
+description: The <SignUpButton> component is a button that links to the sign-up page or displays the sign-up modal.
 ---
 
-# `<SignUpButton />`
+# `<SignUpButton>`
 
-The `<SignUpButton />` component is a button that links to the sign-up page or displays the sign-up modal.
+The `<SignUpButton>` component is a button that links to the sign-up page or displays the sign-up modal.
 
 ## Usage
 
@@ -19,7 +19,7 @@ The `<SignUpButton />` component is a button that links to the sign-up page or d
     return (
       <div>
       <h1> Sign up </h1>
-        <SignUpButton />
+        <SignUpButton>
       </div>
     );
   }
@@ -32,7 +32,7 @@ The `<SignUpButton />` component is a button that links to the sign-up page or d
     return (
       <div>
       <h1> Sign up </h1>
-        <SignUpButton />
+        <SignUpButton>
       </div>
     );
   }
@@ -45,7 +45,7 @@ The `<SignUpButton />` component is a button that links to the sign-up page or d
     return (
       <div>
       <h1> Sign up </h1>
-        <SignUpButton />
+        <SignUpButton>
       </div>
     );
   }
@@ -58,7 +58,7 @@ The `<SignUpButton />` component is a button that links to the sign-up page or d
     return (
       <div>
       <h1> Sign up </h1>
-        <SignUpButton />
+        <SignUpButton>
       </div>
     );
   }
@@ -147,5 +147,5 @@ In some cases you will want to use your own button, or button text. You can do t
 | `redirectUrl` | `string` | Full URL or path to navigate after successful sign in or sign up.<br /> The same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
 | `afterSignInUrl` | `string` | The full URL or path to navigate after a successful sign in. |
 | `afterSignUpUrl` | `string` | The full URL or path to navigate after a successful sign up. |
-| `mode` | `'redirect' \| 'modal'` | Determines what happens when a user clicks on the `<SignUpButton />`. Setting this to `'redirect'` will redirect the user to the sign-up route. Setting this to `'modal'` will open a modal on the current route.<br />Defaults to 'redirect'`
+| `mode` | `'redirect' \| 'modal'` | Determines what happens when a user clicks on the `<SignUpButton>`. Setting this to `'redirect'` will redirect the user to the sign-up route. Setting this to `'modal'` will open a modal on the current route.<br />Defaults to 'redirect'`
 
