--- a/docs/custom-flows/use-sign-up.mdx
+++ b/docs/custom-flows/use-sign-up.mdx
@@ -18,7 +18,7 @@ Getting access to the [`SignUp`][signup-ref] object from inside one of your comp
 The following example accesses the [`SignUp`][signup-ref] object to check the current sign-up attempt's status.
 
 <Callout type="info">
-  The [`useSignUp()`][use-signup-ref] hook can only be used inside a [`<ClerkProvider />`](/docs/components/clerk-provider) context.
+  The [`useSignUp()`][use-signup-ref] hook can only be used inside a [`<ClerkProvider>`](/docs/components/clerk-provider) context.
 </Callout>
 
 ```jsx
@@ -148,7 +148,7 @@ Getting access to the [`SignIn`][signin-ref] object from inside one of your comp
 The following example accesses the [`SignIn`][signin-ref] object to check the current sign-in attempt's status.
 
 <Callout type="info">
-  The [`useSignIn()`][use-signin-ref] hook can only be used inside a [`<ClerkProvider />`](/docs/components/clerk-provider) context.
+  The [`useSignIn()`][use-signin-ref] hook can only be used inside a [`<ClerkProvider>`](/docs/components/clerk-provider) context.
 </Callout>
 
 ```jsx
