--- a/docs/quickstarts/expo.mdx
+++ b/docs/quickstarts/expo.mdx
@@ -50,9 +50,9 @@ module.exports = {
 </Callout>
 
 
-### Mount `<ClerkProvider />`
+### Mount `<ClerkProvider>`
 
-Update your app entry file to include the `<ClerkProvider />` wrapper. The `<ClerkProvider />` component wraps your Expo application to provide active session and user context to Clerk's hooks and other components. It is recommended that the `<ClerkProvider />` wraps everything else to enable the context to be accessible anywhere within the app.
+Update your app entry file to include the `<ClerkProvider>` wrapper. The `<ClerkProvider>` component wraps your Expo application to provide active session and user context to Clerk's hooks and other components. It is recommended that the `<ClerkProvider>` wraps everything else to enable the context to be accessible anywhere within the app.
 
 ```tsx filename="app.tsx"
 import React from "react";
@@ -82,7 +82,7 @@ const styles = StyleSheet.create({
 
 ### Protecting your pages
 
-Clerk offers Control Components that allow you to protect your pages. In the example below, [`<SignedIn />`](/docs/components/control/signed-in) and [`<SignedOut />`](/docs/components/control/signed-out) control components are used.
+Clerk offers Control Components that allow you to protect your pages. In the example below, [`<SignedIn>`](/docs/components/control/signed-in) and [`<SignedOut>`](/docs/components/control/signed-out) control components are used.
 
 ```tsx filename="app.tsx"
 import React from "react";
@@ -248,7 +248,7 @@ export default function SignUpScreen() {
   Now would be good a time to test your sign up flow.
 </Callout>
 
-Make sure you update your `app` file to use the component that you have created. To keep it simple, this example adds the `<SignUpScreen />` to the `<SignedOut />` component.
+Make sure you update your `app` file to use the component that you have created. To keep it simple, this example adds the `<SignUpScreen />` to the `<SignedOut>` component.
 
 ```tsx filename="app.tsx"
 import React from "react";
@@ -343,7 +343,7 @@ export default function SignInScreen() {
   Now would be good a time to test your sign in flow. Restart your server to remove the session.
 </Callout>
 
-Make sure you update your `app` file to use the component that you have created. In the `<SignedOut />` component, replace the `<SignUpScreen />` with the `<SignInScreen />`.
+Make sure you update your `app` file to use the component that you have created. In the `<SignedOut>` component, replace the `<SignUpScreen />` with the `<SignInScreen />`.
 
 ```tsx filename="app.tsx"
 import React from "react";
@@ -439,7 +439,7 @@ export default SignInWithOAuth;
   Now would be a good time to test your OAuth flow. Restart your server to remove the session.
 </Callout>
 
-Make sure you update your `app` file to use the component that you have created. Replace the `<SignInScreen />` with the `<SignInWithOAuth />` to the `<SignedOut />` component.
+Make sure you update your `app` file to use the component that you have created. Replace the `<SignInScreen />` with the `<SignInWithOAuth />` to the `<SignedOut>` component.
 
 ```tsx filename="app.tsx"
 import React from "react";
@@ -478,7 +478,7 @@ A token cache is important for persisting your JWT. By default, Clerk holds it i
 
 Expo provides a way to encrypt and securely store key–value pairs locally on the device via [`expo-secure-store`](https://docs.expo.dev/versions/v47.0.0/sdk/securestore/).
 
-You can use it as your client JWT storage by setting the `tokenCache` prop in your `<ClerkProvider />` as shown below.
+You can use it as your client JWT storage by setting the `tokenCache` prop in your `<ClerkProvider>` as shown below.
 
 #### Install expo-secure-store
 
