--- a/docs/quickstarts/react.mdx
+++ b/docs/quickstarts/react.mdx
@@ -46,9 +46,9 @@ REACT_APP_CLERK_PUBLISHABLE_KEY={{pub_key}}
 
 </InjectKeys>
 
-### Configure `<ClerkProvider />`
+### Configure `<ClerkProvider>`
 
-Clerk requires your React application to be wrapped in the [`<ClerkProvider />`](/docs/components/clerk-provider) component. The `<ClerkProvider />` component provides active session and user context to Clerk's hooks and other components.
+Clerk requires your React application to be wrapped in the [`<ClerkProvider>`](/docs/components/clerk-provider) component. The `<ClerkProvider>` component provides active session and user context to Clerk's hooks and other components.
 
 ```tsx filename="app.tsx"
 import React from "react";
