--- a/docs/upgrade-guides/v3-client-side-changes.mdx
+++ b/docs/upgrade-guides/v3-client-side-changes.mdx
@@ -38,7 +38,7 @@ The [`useAuth()`][use-auth] hook unifies the way you access common auth operatio
 - `useSession()` to access `getToken()` or the `sessionId`
 - `useUser()` to access `getToken()` for integrations
 - `useClerk()` to access `signOut()`
-- `<SignedIn />` and `<SignedOut />` in a way that requires extra components
+- `<SignedIn>` and `<SignedOut>` in a way that requires extra components
 
 ## Hook and component API changes
 
@@ -46,7 +46,7 @@ Version 3 changes several APIs for improved consistency and usability.
 
 ### `useUser()` and `useSession()`
 
-Previously, `useUser` and `useSession` could only be called from inside the `<SignedIn />` component. This restriction has been relaxed, but now developers must manually handle the possibility the user and session objects may not be loaded when the hook is called.
+Previously, `useUser` and `useSession` could only be called from inside the `<SignedIn>` component. This restriction has been relaxed, but now developers must manually handle the possibility the user and session objects may not be loaded when the hook is called.
 
 In a future version, we plan to support React `<Suspense />` to make this even easier.
 
@@ -89,7 +89,7 @@ Props which take URLs (absolute or relative) have been standardized to use the U
 
 ### `useSignUp()` & `useSignIn()`
 
-`useSignUp()` and `useSignIn()` are no longer required to be contained in `<SignedOut />` or `<ClerkLoaded />`. Instead, they have been updated to include a loading state.
+`useSignUp()` and `useSignIn()` are no longer required to be contained in `<SignedOut>` or `<ClerkLoaded>`. Instead, they have been updated to include a loading state.
 
 | Old API | New API |
 | --- | --- |
