--- a/docs/components/clerk-provider.mdx
+++ b/docs/components/clerk-provider.mdx
@@ -1,24 +1,24 @@
 ---
-title: <ClerkProvider />
-description: The <ClerkProvider /> component wraps your React application to provide active session and user context to Clerk's hooks and other components.
+title: <ClerkProvider>
+description: The <ClerkProvider> component wraps your React application to provide active session and user context to Clerk's hooks and other components.
 ---
 
-# `<ClerkProvider />`
+# `<ClerkProvider>`
 
-The `<ClerkProvider />` component wraps your React application to provide active session and user context to Clerk's hooks and other components.
+The `<ClerkProvider>` component wraps your React application to provide active session and user context to Clerk's hooks and other components.
 
 ## Usage
 
-The `<ClerkProvider />` component must be added to your React entrypoint.
+The `<ClerkProvider>` component must be added to your React entrypoint.
 
 <Tabs type="framework" items={["Next.js", "React"]}>
   <Tab>
-  The `<ClerkProvider />` component needs to access headers to authenticate correctly. This means anything wrapped by the provider will be opted into dynamic rendering at request time. If you have static-optimized or ISR pages that you would prefer not to be opted into dynamic rendering, make sure they are not wrapped by `<ClerkProvider />`.
+  The `<ClerkProvider>` component needs to access headers to authenticate correctly. This means anything wrapped by the provider will be opted into dynamic rendering at request time. If you have static-optimized or ISR pages that you would prefer not to be opted into dynamic rendering, make sure they are not wrapped by `<ClerkProvider>`.
 
-  This is easiest to accomplish by ensuring that `<ClerkProvider />` is added further down the tree to wrap route groups that explicitly need authentication instead of having the provider wrap your application root as recommended above. For example, if your project includes a set of landing/marketing pages as well as a dashboard that requires login, you would create separate (marketing) and (dashboard) route groups. Adding `<ClerkProvider />` to the (dashboard)/layout.jsx layout file will ensure that only those routes are opted into dynamic rendering, allowing the marketing routes to be statically optimized.
+  This is easiest to accomplish by ensuring that `<ClerkProvider>` is added further down the tree to wrap route groups that explicitly need authentication instead of having the provider wrap your application root as recommended above. For example, if your project includes a set of landing/marketing pages as well as a dashboard that requires login, you would create separate (marketing) and (dashboard) route groups. Adding `<ClerkProvider>` to the (dashboard)/layout.jsx layout file will ensure that only those routes are opted into dynamic rendering, allowing the marketing routes to be statically optimized.
 
   <Callout type="info">
-    The root layout is a server component. If you plan to use the `<ClerkProvider />` outside the root layout, it will need to be a server component as well.
+    The root layout is a server component. If you plan to use the `<ClerkProvider>` outside the root layout, it will need to be a server component as well.
   </Callout>
 
     <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
@@ -87,7 +87,7 @@ The `<ClerkProvider />` component must be added to your React entrypoint.
 </Tabs>
 
 {/* TODO: Make dedicated docs pages for these meta-frameworks */}
-> Other meta-frameworks, like [Remix](/docs/quickstarts/remix#configure-clerk-app) and [Gatsby](/docs/quickstarts/gatsby#update-gatsby-config-ts), have wrappers around `<ClerkProvider />` to make their integrations tighter.
+> Other meta-frameworks, like [Remix](/docs/quickstarts/remix#configure-clerk-app) and [Gatsby](/docs/quickstarts/gatsby#update-gatsby-config-ts), have wrappers around `<ClerkProvider>` to make their integrations tighter.
 
 ## Properties
 
