--- a/docs/components/control/clerk-loaded.mdx
+++ b/docs/components/control/clerk-loaded.mdx
@@ -1,11 +1,11 @@
 ---
-title: <ClerkLoaded />
-description: The `<ClerkLoaded />` component guarantees that the Clerk object has loaded and will be available under `window.Clerk`. This allows you to wrap child components to access the Clerk object without the need to check it exists.
+title: <ClerkLoaded>
+description: The `<ClerkLoaded>` component guarantees that the Clerk object has loaded and will be available under `window.Clerk`. This allows you to wrap child components to access the Clerk object without the need to check it exists.
 ---
 
-# `<ClerkLoaded />`
+# `<ClerkLoaded>`
 
-The `<ClerkLoaded />` component guarantees that the Clerk object has loaded and will be available under `window.Clerk`. This allows you to wrap child components to access the `Clerk` object without the need to check it exists.
+The `<ClerkLoaded>` component guarantees that the Clerk object has loaded and will be available under `window.Clerk`. This allows you to wrap child components to access the `Clerk` object without the need to check it exists.
 
 ## Usage
 
@@ -30,7 +30,7 @@ The `<ClerkLoaded />` component guarantees that the Clerk object has loaded and 
   export default MyApp;
   ```
 
-  Once you have wrapped your app with `<ClerkLoaded />`, you can access the `Clerk` object without the need to check if it exists.
+  Once you have wrapped your app with `<ClerkLoaded>`, you can access the `Clerk` object without the need to check if it exists.
 
   ```tsx filename="pages/index.tsx"
   declare global {
