--- a/docs/components/control/clerk-loading.mdx
+++ b/docs/components/control/clerk-loading.mdx
@@ -1,11 +1,11 @@
 ---
-title: <ClerkLoading />
-description: The `<ClerkLoading />` renders its children while Clerk is loading, and is helpful for showing a custom loading state.
+title: <ClerkLoading>
+description: The `<ClerkLoading>` renders its children while Clerk is loading, and is helpful for showing a custom loading state.
 ---
 
-# `<ClerkLoading />`
+# `<ClerkLoading>`
 
-The `<ClerkLoading />` renders its children while Clerk is loading, and is helpful for showing a custom loading state.
+The `<ClerkLoading>` renders its children while Clerk is loading, and is helpful for showing a custom loading state.
 
 ## Usage
 
