--- a/docs/components/control/multi-session.mdx
+++ b/docs/components/control/multi-session.mdx
@@ -1,11 +1,11 @@
 ---
-title: <MultisessionAppSupport />
-description: The `<MultisessionAppSupport />` provides a wrapper for your React application that guarantees a full rerendering cycle everytime the current session and user changes.
+title: <MultisessionAppSupport>
+description: The `<MultisessionAppSupport>` provides a wrapper for your React application that guarantees a full rerendering cycle everytime the current session and user changes.
 ---
 
-# `<MultisessionAppSupport />`
+# `<MultisessionAppSupport>`
 
-The `<MultisessionAppSupport />` provides a wrapper for your React application that guarantees a full rerendering cycle everytime the current session and user changes.
+The `<MultisessionAppSupport>` provides a wrapper for your React application that guarantees a full rerendering cycle everytime the current session and user changes.
 
 ## Usage
 
