--- a/docs/components/control/signed-out.mdx
+++ b/docs/components/control/signed-out.mdx
@@ -1,11 +1,11 @@
 ---
-title: <SignedOut />
+title: <SignedOut>
 description: Conditionally render content only when a user is signed out.
 ---
 
-# `<SignedOut />`
+# `<SignedOut>`
 
-The `<SignedOut />` component offers authentication checks as a cross-cutting concern. Any child nodes wrapped by a `<SignedOut />` component will be rendered only if there's no User signed in to your application.
+The `<SignedOut>` component offers authentication checks as a cross-cutting concern. Any child nodes wrapped by a `<SignedOut>` component will be rendered only if there's no User signed in to your application.
 
 ## Usage
 <Tabs type="framework" items={["Next.js", "React", "Remix"]}>
@@ -58,7 +58,7 @@ The `<SignedOut />` component offers authentication checks as a cross-cutting co
 
   ### Usage with React Router
 
-  Below is an example of how to use `<SignedOut />` with React Router. The `<SignedOut />` component can be used as a child of a `<Route />` component to render content only to signed in users.
+  Below is an example of how to use `<SignedOut>` with React Router. The `<SignedOut>` component can be used as a child of a `<Route />` component to render content only to signed in users.
 
   ```tsx filename="app.tsx"
   import { Routes, Route } from 'react-router-dom';
