--- a/docs/components/customization/overview.mdx
+++ b/docs/components/customization/overview.mdx
@@ -5,7 +5,7 @@ description: Utilize Clerk's appearance property in order to share styles across
 
 # Appearance prop
 
-The appearance prop can be applied to [React's `<ClerkProvider />`](/docs/components/clerk-provider) to share styles across every component, or individually to any of the Clerk components.
+The appearance prop can be applied to [React's `<ClerkProvider>`](/docs/components/clerk-provider) to share styles across every component, or individually to any of the Clerk components.
 
 This applies to all of the React-based packages, like [Next.js](/docs/quickstarts/nextjs) and [Gatsby](/docs/quickstarts/gatsby), as well as [the pure JavaScript ClerkJS package](/docs/references/javascript/overview).
 
@@ -29,13 +29,13 @@ Clerk offers [a set of themes that can be used with the `appearance` prop](/docs
 
 ### Usage
 
-To use a theme, import it from `@clerk/themes` and pass it to the `appearance` prop of a Clerk component. You can pass it to the [`<ClerkProvider />`](/docs/components/clerk-provider) component to apply it to all Clerk components in your app or you can pass it to a single Clerk component.
+To use a theme, import it from `@clerk/themes` and pass it to the `appearance` prop of a Clerk component. You can pass it to the [`<ClerkProvider>`](/docs/components/clerk-provider) component to apply it to all Clerk components in your app or you can pass it to a single Clerk component.
 
 > [Visit the Themes docs to see a list of the themes that Clerk offers.](/docs/components/customization/themes)
 
-#### Pass a theme to `<ClerkProvider />`
+#### Pass a theme to `<ClerkProvider>`
 
-To apply a theme to all Clerk components, pass the `appearance` prop to the `<ClerkProvider />` component. The `appearance` prop accepts the property `baseTheme`, which can be set to a theme.
+To apply a theme to all Clerk components, pass the `appearance` prop to the `<ClerkProvider>` component. The `appearance` prop accepts the property `baseTheme`, which can be set to a theme.
 
 In the example below, the `dark` theme is applied to all Clerk components.
 
@@ -301,7 +301,7 @@ In the example below, the `dark` theme is applied first, then the `neobrutalism`
   </Tab>
 </Tabs>
 
-You can apply a theme to all instances of a Clerk component by passing the component to the `appearance` prop of the `<ClerkProvider />`. The `appearance` prop accepts the name of the Clerk component you want to style as a key.
+You can apply a theme to all instances of a Clerk component by passing the component to the `appearance` prop of the `<ClerkProvider>`. The `appearance` prop accepts the name of the Clerk component you want to style as a key.
 
 In the example below, the `neobrutalism` theme is applied to all instances of the [`<SignIn />`](/docs/components/authentication/sign-in) component.
 
