--- a/docs/deployments/overview.mdx
+++ b/docs/deployments/overview.mdx
@@ -31,7 +31,7 @@ In most cases, you will want to clone your development instance. This will copy 
 
 A common mistake when deploying to production is forgetting to change your API keys to your production instances keys. The best way to set this up is to make use of environment variables. All modern hosting providers, such as AWS, GCP, Vercel, Heroku, and Render, make it easy to add these values. Locally, you should use a `.env` file. This way, these values are being set dynamically depending on your environment. Here's a list of Clerk variables you'll need to change:
 
-1. **Publishable Key:** Formatted as `pk_test_` in development and `pk_live_` in production. This is passed to the `<ClerkProvider />` during initialization.
+1. **Publishable Key:** Formatted as `pk_test_` in development and `pk_live_` in production. This is passed to the `<ClerkProvider>` during initialization.
 
 2. **Secret Key:** Formatted as `sk_test_` in development and `sk_live_` in production. These values are used to access Clerk's Backend API.
 
