--- a/docs/references/react/use-organizations.mdx
+++ b/docs/references/react/use-organizations.mdx
@@ -22,7 +22,7 @@ For now the available methods are: `createOrganization()`, `getOrganizationMembe
 The examples below illustrates simple usage of the methods available. 
 
 <Callout type="info">
-  Note that your component must be a descendant of the [`<SignedIn />`](/docs/components/control/signed-in) component, which in turn needs to be wrapped inside the [`<ClerkProvider />`](/docs/components/clerk-provider).
+  Note that your component must be a descendant of the [`<SignedIn>`](/docs/components/control/signed-in) component, which in turn needs to be wrapped inside the [`<ClerkProvider>`](/docs/components/clerk-provider).
 </Callout>
 
 <CodeBlockTabs options={["createOrganization", "getMemberships", "getOrganization"]}>
