--- a/docs/references/react/use-user.mdx
+++ b/docs/references/react/use-user.mdx
@@ -10,7 +10,7 @@ The `useUser()` hook is a convenient way to access the current [`User`](/docs/re
 ## Usage
 
 <Callout type="info">
-  Note that your component must be a descendant of [`<ClerkProvider />`](/docs/components/clerk-provider).
+  Note that your component must be a descendant of [`<ClerkProvider>`](/docs/components/clerk-provider).
 </Callout>
 
 ### Retrieve the current user data
