--- a/docs/users/web3.mdx
+++ b/docs/users/web3.mdx
@@ -52,7 +52,7 @@ export default function Home() {
           Address:{" "}
           {primaryWeb3Wallet ? primaryWeb3Wallet.web3Wallet : "Not found"}
         </p>
-        <SignOutButton />
+        <SignOutButton>
       </main>
     </>
   );
